--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -9,8 +10,9 @@
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewController">
     <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
    <children>
-      <Button fx:id="centerButton" mnemonicParsing="false" text="THREAD BUTTON" />
-      <Button fx:id="secondButton" mnemonicParsing="false" text="SECOND" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button fx:id="deployButton" mnemonicParsing="false" text="Deploy" />
+      <Button fx:id="loadButton" mnemonicParsing="false" text="Load" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <TextField fx:id="pathField" GridPane.rowIndex="1" />
 
    </children>
    <columnConstraints>
