--- a/src/main/resources/listcellinfo.fxml
+++ b/src/main/resources/listcellinfo.fxml
@@ -6,19 +6,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 <?import javafx.scene.control.CheckBox?>
-<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="gridPane"  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+
     <columnConstraints>
-        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="31.0" minWidth="30.0" prefWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="10.0" prefWidth="30.0" />
-        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="31.0" minWidth="30.0" prefWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="120.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="70"  minWidth="70" />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="550"  minWidth="550" />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="50"  minWidth="50"  />
+
     </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
-    </rowConstraints>
     <children>
-        <Label fx:id="label1" minWidth="50" text="Label" GridPane.columnIndex="1" />
-        <Label fx:id="label2" minWidth="50" text="Label" GridPane.columnIndex="4" />
-        <CheckBox fx:id="checkBox" GridPane.columnIndex="8" ></CheckBox>
+        <Label style="-fx-font-weight: bold" fx:id="label1" minWidth="50" text="asdasd"  GridPane.columnIndex="0" />
+        <Label fx:id="label2"  minWidth="50" text="" GridPane.columnIndex="1" />
+        <CheckBox  mnemonicParsing="false" GridPane.halignment="CENTER" GridPane.valignment="CENTER" minWidth="50"  fx:id="checkBox"  GridPane.columnIndex="2" ></CheckBox>
     </children>
 </GridPane>
