--- a/src/main/resources/listcellinfo.fxml
+++ b/src/main/resources/listcellinfo.fxml
@@ -9,14 +9,14 @@
 <GridPane fx:id="gridPane"  maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
 
     <columnConstraints>
-        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="70"  minWidth="70" />
-        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="550"  minWidth="550" />
-        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="50"  minWidth="50"  />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="100"  minWidth="110" />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"  maxWidth="550"  minWidth="530" />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS"    />
 
     </columnConstraints>
     <children>
-        <Label style="-fx-font-weight: bold" fx:id="label1" minWidth="50" text="asdasd"  GridPane.columnIndex="0"  GridPane.rowIndex="1" />
+        <Label style="-fx-font-weight: bold" fx:id="label1" minWidth="110" prefWidth="100" text="loadbalancer1"  GridPane.columnIndex="0"  GridPane.rowIndex="1" />
         <Label fx:id="label2"  minWidth="50" text="" GridPane.columnIndex="1"  GridPane.rowIndex="1" />
-        <CheckBox  mnemonicParsing="false" GridPane.halignment="CENTER"  minWidth="50"  fx:id="checkBox"  GridPane.columnIndex="2"  GridPane.rowIndex="1"  ></CheckBox>
+        <CheckBox  mnemonicParsing="false" GridPane.halignment="CENTER"   fx:id="checkBox"  GridPane.columnIndex="2"  GridPane.rowIndex="1"  ></CheckBox>
     </children>
 </GridPane>
