--- a/src/main/resources/mainScene.fxml
+++ b/src/main/resources/mainScene.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <BorderPane fx:id="parent" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controller.ViewController">
+            fx:controller="controller.Controller">
     <center>
         <ScrollPane fitToWidth="true" fitToHeight="true" >
             <VBox alignment="CENTER" spacing=" 10">
