--- a/src/main/resources/popup.fxml
+++ b/src/main/resources/popup.fxml
@@ -8,7 +8,7 @@
 
 <GridPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.PopupController"
+            fx:controller="controller.subcontrollers.PopupController"
             prefWidth="710" maxWidth="-Infinity" minHeight="-Infinity" minWidth="710">
 
     <columnConstraints>
